[package]
name = "pirate_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.81"
[lib]
name = "pirate_lib"
path = "src/pirate_lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "main"
path = "src/bin.rs"